Minor fixes for Portfolio inclusion * Touch compatibility * Menu Button visibility * Size optimization

--- a/Grundschulprojekt/css/foo.css
+++ b/Grundschulprojekt/css/foo.css
@@ -1,11 +1,4 @@
-﻿*
-{
-    -webkit-user-select: none; /* Chrome/Safari */        
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* IE10+ */
-}
-
-#minigame
+﻿#minigame
 {
     position: absolute;
     width: 88%;
