--- a/Grundschulprojekt/css/splashScreen.css
+++ b/Grundschulprojekt/css/splashScreen.css
@@ -34,7 +34,7 @@
 }
 
 #mainGame{
-    background: url(../img/Background.png) no-repeat center center fixed;
+    background: url(../img/Background.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
